<resources>
    <string name="app_name">InventoryScan</string>
    <string name="buttonStart">Start Scanning</string>
    <string name="buttonLookup">Lookup Station</string>
    <string name="buttonExport">Export Data</string>
    <string name="buttonCheck">Check</string>
    <string name="buttonLook">Lookup</string>
    <string name="buttonAdd">Add Item</string>
    <string name="buttonNext">Next Station</string>
    <string name="buttonDone">Done Editing</string>
    <string name="buttonEdit">Edit Station</string>
    <string name="delete_selected">Delete Selected</string>
    <string name="textview">TextView</string>
    <string name="edit">EDIT</string>
    <string name="done">DONE</string>
    <string name="station">Station</string>
    <string name="inventory_scanner">Inventory Scanner</string>
    <string name="barcode">Barcode</string>
    <string name="scan">Scan</string>
</resources>
