<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_focused"
    tools:context=".ScannedResult"
    tools:layout_editor_absoluteY="81dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/button6">

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="#015500"
            android:onClick="nextStation"
            android:text="@string/buttonNext"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:id="@+id/button11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#015500"
            android:onClick="deleteItem"
            android:text="@string/delete_selected"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="#015500"
            android:onClick="doneWithIt"
            android:text="@string/buttonDone"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />
    </LinearLayout>

    <Button
        android:id="@+id/button6"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#015500"
        android:onClick="addItem"
        android:text="@string/buttonAdd"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewScanned" />

    <TextView
        android:id="@+id/textViewStationInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="178dp"
        android:text="@string/textview"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/listViewScanned"
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:layout_marginTop="14dp"
        android:background="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStationInfo" />

</android.support.constraint.ConstraintLayout>